@@ -1,3 +1,7 @@
+2010-08-12  6.6.3-5 Cristy  <quetzlzacatenango@image...>
+  * The -fx 2e+6/1e+5 argument no longer returns the wrong results (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=16833).
+
 2010-08-10  6.6.3-5 Glenn Randers-Pehrson <glennrp@image...>
   * Emit a warning if the PNG encoder can't satisfy the color type and
     bit depth requested with a "-define" directive.
